# ml_1_base

./: README.md  app.py  pyproject.toml  selling_price_model.pkl
EDA/: For_saving_model.ipynb  HW1_Regression_with_inference_base.ipynb
pages/: info.py  input.py  load.py  test.py  train.py
utils/: common.py  constants.py  preprocessors.py
